k8s/monitoring/prometheus-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: prometheus
spec:
  selector:
    prometheus: prometheus2
  ports:
  - name: prometheus
    port: 9090
    targetPort: 9090
