k8s/monitoring/grafana-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
  name: grafana
spec:
  rules:
  - host: grafana.dev.klstr.io
    http:
      paths:
      - path: /
        backend:
          serviceName: grafana
          servicePort: 3000
