k8s/monitoring/prometheus-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
  name: prometheus
spec:
  rules:
  - host: prometheus.dev.klstr.io
    http:
      paths:
      - path: /
        backend:
          serviceName: prometheus
          servicePort: 9090
